<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.CadastroUsuarioActivity">

    <TextView
        android:id="@+id/txtCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/txtCadastro"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtv_Nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtv_Nome"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/edtNome"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtv_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtv_Email"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/edtEmail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/txtv_SenhaA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtv_SenhaA"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtSenhaA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/edtSenhaA"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/txtv_SenhaB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtv_SenhaB"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtSenhaB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/edtSenhaB"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/ckTermo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:onClick="ValidarTermo"
        android:text="@string/ckTermo"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/btnCadastro"
        android:textStyle="bold" />

</androidx.appcompat.widget.LinearLayoutCompat>