<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.LoginActivity">

    <TextView
        android:id="@+id/txtAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/txtLogin"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtEmail"
        android:textColor="@color/colorVerde"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/edtHintEmail"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/txtSenha"
        android:textColor="@color/colorVerde"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/edtHintSenha"
        android:inputType="textPersonName" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="8dp">

        <CheckBox
            android:id="@+id/ckLembrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:onClick="lembrarSenha"
            android:text="@string/ckLembrar" />

        <TextView
            android:id="@+id/txtRecuperarSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="7dp"
            android:layout_marginRight="16dp"
            android:textSize="16sp"
            android:text="@string/txtRecuperarSenha"
            android:textColor="@color/colorVerde" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/btnAcessar"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorAzul"
            android:text="@string/btnAcessar"
            android:textColor="@color/colorWhiet"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSejaVip"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorAzul"
            android:text="@string/btnSejaVip"
            android:textColor="@color/colorWhiet"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtVersaoApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/txtVersaoApp"
            android:textColor="@color/colorVerde"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtLerPolitica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/txtLerPolitica"
            android:textColor="@color/colorVerde"
            android:textSize="16sp" />

    </RelativeLayout>


</androidx.appcompat.widget.LinearLayoutCompat>